--- a/json/recursive/test/.pylintrc
+++ b/json/recursive/test/.pylintrc
@@ -1,2 +1,2 @@
 [General]
-init-hook='sys.path.append("../src")'
+init-hook='import sys;sys.path.append("../src");sys.path.append("../../extensions/src")'
