--- a/json/recursive/test/pytest.ini
+++ b/json/recursive/test/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-pythonpath = . ../src/../example ../../extensions/src ../../decorators/src
+pythonpath = . ../src/../example ../../extensions/src
